# cognitive-engineering-fitts-s-law

./: README.md  data.csv  main.ipynb  pyproject.toml
